# picasclient

./: .gitignore  Makefile  README.md  metadata.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-app.yml
containers/docker/: docker-compose.yml
docs/: fractal-example.md  picas-layers.pptx  quick-example.md  token-commands.md
examples/: 00-environment-setup.py  01-database-setup.py  02-local-run.py  03-spider-run.py  04-slurm-snellius.py  N-core-job.sh  core-scanner.py  core_scanner.py  createTokens  createViews.py  create_config.py  create_tokens.py  create_views.py  deleteTokens.py  examples.ipynb  fractals.jdl  grid-example.jdl  local-example.py  local_example.py  multi-core-job.sh  picasconfig.py  picasconfig_example.py  process_task.sh  pushAutoPilotExampleTokens.py  pushEventsTokens.py  pushTokens.py  push_tokens.py  quickExample.txt  resetTokens.py  run_autopilot.py  scrub-example.py  scrub-timer-example.py  scrubExample.txt  scrubTimerExample.txt  single-core-job.sh  slurm-example.sh  slurm_example.sh  snakemake.jdl  snellius_example.sh  spider_example.sh  (+2 more)
examples/autopilot/: README  core-scanner.py  createViews.py  multi-core-job.sh  multi-core-pilot.py  process_task.sh  pushAutoPilotExampleTokens.py  setup.sh  single-core-job.sh  single-core-pilot.py
examples/grid-sandbox/: grid-example.py  process_task.sh  startpilot.sh
picas/: __init__.py  actors.py  batchid.py  clients.py  crypto.py  documents.py  executers.py  generators.py  iterators.py  jobid.py  metadata.py  modifiers.py  picas_config.py  picaslogger.py  srm.py  srmclient.py  util.py
scripts/: local-example.py  pushTokens.py  quickExample.txt
tests/: test_actors.py  test_document.py  test_executers.py  test_executors.py  test_generators.py  test_iterators.py  test_jobid.py  test_mock.py  test_modifiers.py  test_util.py
(+9 files in other folders)
