[tool.poetry]
name = "picas"
version = "1.0.1"
description = "Python client using CouchDB as a token pool server."
authors = ["Jan Bot, Joris Borgdorff, Lodewijk Nauta, Haili Hu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
couchdb = "^1.2"
stopit = "^1.1.2"
setuptools = "^66"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"

[tool.poetry.group.test]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
